# Low-Cost-Mocap

./: .gitignore
3d_files/: camera_arm_v2.3mf  camera_arm_v2.stl
3d_files/prusa/: body1.3mf  body2.3mf  body3.3mf  cam-body-v1_0.4n_0.2mm_PLA_MK4_2h33m.bgcode  triangle.3mf
PPMEncoder/: PPMEncoder.ino
computer_code/: notes.txt  pyproject.toml
computer_code/api/: beacon.py  camera-mapping.py  camera-params-virt.json  camera-params.json  com.py  comtest.py  crazy.py  distance.py  duck.py  fox.py  helpers.py  index.py  mem.py  ok.py  param-notes.txt  pose_buffer.py  send_lines.py  text  tr-from-sim-scaled.json  tr-holy.json  tr-jos-2-cam.json  tr-jos.json  tr-sim.json  utils.py
computer_code/api/latency_test/: lat.py  latency_test.py  latency_test_2.py  latency_test_show.py  test_23.py  test_pseyepy.py
computer_code/python-other/: checkerboard.py  fix-shen.py  fov.py  mem.py  test_opencv.py
computer_code/src/: App.tsx
computer_code/src/components/: CameraRotation.tsx  CameraWireframe.tsx  MySimplePlane.tsx
esp8266/receive/: receive.ino
esp8266/send/: send.ino
